// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders children when has success 1`] = `
<div
  className="card-body"
>
  foo
</div>
`;

exports[`Tab renders default 1`] = `
<div
  className="card-body"
>
  <p
    className="Tab-slate"
  >
    Puedes buscar posts, usuarios o canales
  </p>
</div>
`;

exports[`Tab renders empty slate when has success and no items 1`] = `
<div
  className="card-body"
>
  <p
    className="Tab-slate"
  >
    No hay resultados
  </p>
</div>
`;

exports[`Tab renders loader when is fetching 1`] = `
<div
  className="card-body"
>
  <p
    className="Tab-slate"
  >
    <i
      className="fa fa-circle-notch fa-spin mr-1"
    />
    Buscando...
  </p>
</div>
`;

exports[`Tab renders message when has failure 1`] = `
<div
  className="card-body"
>
  <p
    className="Tab-slate text-danger"
  >
    ¡Ratas! Intenta recargar la página
  </p>
</div>
`;
